Allow sendmail options to be provided

--- a/dist.ini
+++ b/dist.ini
@@ -13,7 +13,7 @@ Capture::Tiny    = 0.08 ; for testing
 Email::Abstract  = 3 ; XXX: really use Abstract?; 3 = \$str
 Email::Address   = 0 ; used for env-from-msg (::Simple)
 List::MoreUtils  = 0 ; minimum version unknown; uniq
-Moose            = 0.70 ; based on feedback from ANDK looking at testers
+Moose            = 0.90 ; for native traits
 Net::SMTP        = 0 ;
 Try::Tiny        = 0 ; required by Moose, anyway
 Throwable::Error = 0.100090 ; with $obj->throw and ->throw($str)
